<resources>
    <string name="app_name">Android POS</string>
    <string name="action_settings">Settings</string>

    <string name="empDialogTitle">Employee List</string>

    <string name="default_text_view">TextView</string>

    <!-- Employee Management Strings -->
    <string name="emp_management_activity_title">Employee Management</string>
    <string name="emp_management_emp_id">Employee ID:</string>
    <string name="emp_management_emp_id_hint">Enter the Employee ID here…</string>
    <string name="emp_management_emp_fname">First Name:</string>
    <string name="emp_management_emp_fname_hint">Enter the First Name here…</string>
    <string name="emp_management_emp_lname">Last Name:</string>
    <string name="emp_management_emp_lname_hint">Enter the Last Name here…</string>
    <string name="emp_management_emp_role">Role:</string>
    <string name="emp_management_emp_role_hint">Enter the Role here…</string>
    <string name="emp_management_emp_contact_hint">Enter the Contact Number here…</string>
    <string name="emp_management_emp_contact">Contact No:</string>
    <string name="emp_management_emp_password">Password:</string>
    <string name="emp_management_emp_password_hint">Enter the Password here…</string>

    <string name="emp_management_button_add_emp">Add Details</string>
    <string name="emp_management_button_update_emp">Update Details</string>
    <string name="emp_management_button_get_details">Get Details</string>
    <string name="emp_management_button_delete_emp">Delete Employee</string>
    <string name="emp_management_button_view_all">View All Employees</string>
    
    <string-array name="empRole">
        <item>Employee</item>
        <item>Manager</item>
    </string-array>

    <!-- Employee Dialog Strings -->
    <string name="emp_dialog_emp_id">Emp. ID:</string>
    <string name="emp_dialog_emp_fname">First Name:</string>
    <string name="emp_dialog_emp_lname">Last Name:</string>
    <string name="emp_dialog_emp_role">Role:</string>
    <string name="emp_dialog_emp_contact">Contact No:</string>
    <string name="emp_dialog_emp_password">Password:</string>

    <!-- Main Menu Strings -->
    <string name="main_menu_activity_title">Android POS - Main Menu</string>
    <string name="main_menu_button_logout">Logout</string>
    <string name="main_menu_button_stock_management">Stock Management</string>
    <string name="main_menu_button_checkout">Checkout</string>
    <string name="main_menu_button_employee_management">Employee Management</string>
    <string name="main_menu_button_stock_check">Check Stock</string>
    <string name="main_menu_button_barcode_gen">Barcode Generator</string>
    <string name="main_menu_button_settings">Settings</string>

    <!-- Login Page Strings -->
    <string name="login_page_emp_id">Employee ID:</string>
    <string name="login_page_emp_password">Password:</string>
    <string name="login_page_button_login">Login</string>

    <!-- Stock Management Strings -->
    <string name="scan">Scan</string>
    <string name="filter_hint">
        Type here to filter&#8230;
    </string>
    <string name="action_search">Search</string>
    <string name="stock_management_activity_title">Stock Management</string>

    <!-- Settings Strings -->
    <string name="setting_activity_title">Settings</string>

    <!-- Barcode Generator Strings -->
    <string name="barcode_gen_activity_title">Barcode Generator</string>
    <string name="barcode_gen_tv_ean_code">EAN code:</string>
    <string name="barcode_gen_edit_barcode_hint">Enter code here…</string>
    <string name="barcode_gen_button_create_barcode">Create Barcode</string>
    <string name="barcode_gen_button_save_image">Save Image</string>

    <!-- Checkout Strings -->
    <string name="checkout_activity_title">Checkout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="total_price">Total Price (£):</string>
    <string name="activity_checkout_button_card">Card</string>
    <string name="activity_checkout_button_cash">Cash</string>
    <string name="activity_checkout_edit_text_stockId">Enter the Stock ID here…</string>
    <string-array name="checkoutMenu">
        <item>Remove</item>
        <item>Increase Qty.</item>
        <item>Decrease Qty.</item>
    </string-array>

    <!-- Stock Check Strings -->
    <string name="stock_check_activity_title">Check Stock</string>
    <string name="listview_stock_check_stock_id">Stock ID:</string>
    <string name="listview_stock_check_stock_name">Name:</string>
    <string name="listview_stock_check_stock_cat">Category:</string>
    <string name="listview_stock_check_sale_price">Sale Price (£):</string>
    <string name="listview_stock_check_stock_qty">Stock Qty:</string>

    <!-- Add Stock Fragment Strings -->
    <string name="add_stock_fragment_stock_id">Stock ID:</string>
    <string name="add_stock_fragment_stock_id_hint">Enter the Stock ID here…</string>
    <string name="add_stock_fragment_stock_name">Stock Name:</string>
    <string name="add_stock_fragment_stock_name_hint">Enter the Stock Name here…</string>
    <string name="add_stock_fragment_stock_item_price">Sale Price (£):</string>
    <string name="add_stock_fragment_stock_item_price_hint">Enter the Sale Price here…</string>
    <string name="add_stock_fragment_stock_cost">Stock Cost (£):</string>
    <string name="add_stock_fragment_stock_cost_hint">Enter the Stock Cost here…</string>
    <string name="add_stock_fragment_stock_qty">Stock Quantity:</string>
    <string name="add_stock_fragment_stock_qty_hint">Enter the Stock Quantity here…</string>
    <string name="add_stock_fragment_stock_cat">Stock Category:</string>
    <string name="add_stock_fragment_stock_cat_hint">Enter the Category here…</string>
    <string name="add_stock_fragment_button_add_item">Add Item</string>

    <!-- Stock Info Strings -->
    <string name="listview_stock_info_stock_id">Stock ID:</string>
    <string name="listview_stock_info_stock_name">Name:</string>
    <string name="listview_stock_info_stock_cat">Category:</string>
    <string name="listview_stock_info_stock_sale_price">Sale Price (£):</string>
    <string name="listview_stock_info_stock_cost">Cost Price (£):</string>

    <!-- Stock Level Strings -->
    <string name="listview_stock_level_stock_id">Stock ID:</string>
    <string name="listview_stock_level_stock_name">Name:</string>
    <string name="listview_stock_level_stock_qty">Stock Qty:</string>
    <string-array name="stockLevelMenu">
        <item>Increase Stock</item>
        <item>Decrease Stock</item>
    </string-array>

    <!-- Return Item Strings -->
    <string name="return_item_activity_title">Return Item</string>
    <string name="edit_return_sale_id_hint">Enter Sale ID here…</string>
    <string name="textview_return_sale_id">Sale ID:</string>


    <!-- New Strings -->

</resources>
