<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".AddStockFragment">
        <!--android:weightSum="1">-->

        <TextView
            android:id="@+id/tvEmpID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editEmpId"
            android:layout_toLeftOf="@+id/editEmpId"
            android:layout_toStartOf="@+id/editEmpId"
            android:text="@string/emp_management_emp_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editEmpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvEmpFName"
                android:layout_alignEnd="@+id/scan_format"
                android:layout_alignRight="@+id/scan_format"
                android:ems="10"
                android:hint="@string/emp_management_emp_id_hint"
                android:inputType="number"
                android:singleLine="true" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvEmpFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/emp_management_emp_fname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/editEmpFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editEmpId"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/editEmpId"
            android:layout_below="@+id/editEmpId"
            android:hint="@string/emp_management_emp_fname_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvEmpLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tvEmpFName"
            android:layout_alignRight="@+id/tvEmpFName"
            android:layout_below="@+id/editItemName"
            android:text="@string/emp_management_emp_lname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/editEmpLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emp_management_emp_lname_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvEmpRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emp_management_emp_role"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/empRole"
            android:prompt="@string/emp_management_emp_role_hint"/>

        <TextView
            android:id="@+id/tvEmpContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emp_management_emp_contact"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/editContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emp_management_emp_contact_hint"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvEmpPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emp_management_emp_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emp_management_emp_password_hint"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_add_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_management_button_add_emp" />

                <Button
                    android:id="@+id/button_update_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_management_button_update_emp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_get_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_management_button_get_details" />

                <Button
                    android:id="@+id/button_delete_emp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emp_management_button_delete_emp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_view_emp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emp_management_button_view_all"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>