<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".AddStockFragment"
        android:orientation="vertical"
        >
        <!--android:weightSum="1">-->

            <TextView
                android:id="@+id/tvSCStockID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_id"
                android:layout_above="@+id/editStockID"
                android:layout_toLeftOf="@+id/editStockID"
                android:layout_toStartOf="@+id/editStockID"
                android:textColor="@color/Black"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editStockID"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvItemName"
                    android:layout_alignRight="@+id/scan_format"
                    android:layout_alignEnd="@+id/scan_format"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/add_stock_fragment_stock_id_hint"/>

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/scan" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_name"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editStockName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editStockID"
                android:layout_alignLeft="@+id/editStockID"
                android:layout_alignStart="@+id/editStockID"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/add_stock_fragment_stock_name_hint"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_item_price"
                android:layout_below="@+id/editItemName"
                android:layout_alignRight="@+id/tvItemName"
                android:layout_alignEnd="@+id/tvItemName"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editSalePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/add_stock_fragment_stock_item_price_hint"/>

            <TextView
                android:id="@+id/tvStockCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_cost"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editStockCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/add_stock_fragment_stock_cost_hint"/>

            <TextView
                android:id="@+id/tvStockQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_qty"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editStockQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/add_stock_fragment_stock_qty_hint"/>

            <TextView
                android:id="@+id/tvStockCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_stock_fragment_stock_cat"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_stock_fragment_stock_cat_hint"
                android:singleLine="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.03">

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_stock_fragment_button_add_item" />
            </LinearLayout>

        </LinearLayout>

</android.support.v4.widget.NestedScrollView>