<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dip"
    android:background="#FFFFFF"
    android:layout_marginBottom="1dp">

    <TextView
        android:id="@+id/tvSC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/listview_stock_check_stock_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/tvSC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSC1"
        android:layout_below="@+id/tvSC1"
        android:text="@string/listview_stock_check_stock_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/tvSC3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSC2"
        android:layout_below="@+id/tvSC2"
        android:text="@string/listview_stock_check_stock_cat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/tvSC4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSC3"
        android:layout_below="@+id/tvSC3"
        android:text="@string/listview_stock_check_sale_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/tvSC5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSC4"
        android:layout_below="@+id/tvSC4"
        android:text="@string/listview_stock_check_stock_qty"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />





    <TextView
        android:id="@+id/tvSCStockID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text_view"
        android:layout_alignBottom="@+id/tvSC1"
        android:layout_toRightOf="@+id/tvSC4"
        android:layout_toEndOf="@+id/tvSC4"
        android:layout_marginLeft="18dp" />

    <TextView
        android:id="@+id/tvSCStockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text_view"
        android:layout_above="@+id/tvSC3"
        android:layout_alignLeft="@+id/tvSCStockID"
        android:layout_alignStart="@+id/tvSCStockID" />

    <TextView
        android:id="@+id/tvSCCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_text_view"
        android:layout_alignBottom="@+id/tvSC3"
        android:layout_alignLeft="@+id/tvSCStockName"
        android:layout_alignStart="@+id/tvSCStockName" />

    <TextView
        android:id="@+id/tvSCSalePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSC4"
        android:layout_alignBottom="@+id/tvSC4"
        android:layout_alignLeft="@+id/tvSCCategory"
        android:text="@string/default_text_view" />

    <TextView
        android:id="@+id/tvSCStockQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSC5"
        android:layout_alignBottom="@+id/tvSC5"
        android:layout_alignLeft="@+id/tvSCCategory"
        android:text="@string/default_text_view" />

</RelativeLayout>