<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip"
        android:background="#FFFFFF"
        android:layout_marginBottom="1dp">

    <TextView
        android:id="@+id/tvSC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listview_stock_level_stock_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black"
        android:layout_alignTop="@+id/tvSCStockName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvSC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listview_stock_level_stock_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black"
        android:layout_below="@+id/tvSC1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvSC3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/listview_stock_level_stock_qty"
        android:layout_below="@+id/tvSC2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/Black"/>

    <TextView
        android:id="@+id/tvStockNameLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_alignBottom="@+id/tvSC2"
        android:layout_alignLeft="@+id/tvStockQtyLevel"
        android:layout_alignStart="@+id/tvStockQtyLevel" />

    <TextView
        android:id="@+id/tvStockIDLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_alignBottom="@+id/tvSC1"
        android:layout_alignLeft="@+id/tvStockNameLevel"
        android:layout_alignStart="@+id/tvStockNameLevel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:id="@+id/tvStockQtyLevel"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_alignBottom="@+id/tvSC3"
        android:layout_toRightOf="@+id/tvSC3"
        android:layout_toEndOf="@+id/tvSC3" />
</RelativeLayout>